--- a/Lab1/Lab1WebApplication/src/main/resources/static/index.html
+++ b/Lab1/Lab1WebApplication/src/main/resources/static/index.html
@@ -9,12 +9,12 @@
           href="style.css"/>
 
     <!-- link favicon -->
-    <link rel="icon" type="image/png" href="decap-favicon.png">
+    <link rel="icon" type="image/png" href="Imgs/decap-favicon.png">
 </head >
 
 <body class="gradLight">
 <div class="container">
-    <img src="team-photo.jpg" alt="Фото" class="team-pic">
+    <img src="Imgs/team-photo.jpg" alt="Фото" class="team-pic">
     <div class="team-name">Команда "Repentance"</div>
     <div class="team-desc">
         У темряві маминого підвалу збираються чотири душі, кожна з власним тягарем і спокусою. Разом вони пробираються
@@ -26,25 +26,25 @@
     <div class="team-members">
         <div class="member">
             <a href="/isaac">
-                <img src="isaac.png" alt="isaac-photo">
+                <img src="Imgs/isaac.png" alt="isaac-photo">
                 <div class="member-name">Isaac</div>
             </a>
         </div>
         <div class="member">
             <a href="/magdalene">
-                <img src="magdalene.png" alt="magdalene-photo">
+                <img src="Imgs/magdalene.png" alt="magdalene-photo">
                 <div class="member-name">Magdalene</div>
             </a>
         </div>
         <div class="member">
             <a href="/cain">
-                <img src="cain.png" alt="cain-photo">
+                <img src="Imgs/cain.png" alt="cain-photo">
                 <div class="member-name">Cain</div>
             </a>
         </div>
         <div class="member">
             <a href="/judas">
-                <img src="judas.png" alt=judas-photo">
+                <img src="Imgs/judas.png" alt=judas-photo">
                 <div class="member-name">Judas</div>
             </a>
         </div>
