--- a/Lab1/Lab1WebApplication/src/main/resources/static/isaac-member-page.html
+++ b/Lab1/Lab1WebApplication/src/main/resources/static/isaac-member-page.html
@@ -11,7 +11,7 @@
           href="style.css"/>
 
     <!-- link favicon -->
-    <link rel="icon" type="image/png" href="decap-favicon.png">
+    <link rel="icon" type="image/png" href="Imgs/decap-favicon.png">
 
 </head>
 <body class="gradDark">
@@ -19,7 +19,7 @@
 
     <div class="member-name-title">Isaac | The Broken</div>
 
-    <img src="isaac-photo.webp" class="member-photo" alt="isaac-member-photo">
+    <img src="Imgs/isaac-photo.webp" class="member-photo" alt="isaac-member-photo">
 
     <div class="member-desc">
         <p>
@@ -38,7 +38,7 @@
 
 </div>
 <a href="/" class="back-button">
-    <img src="moms-knife.png" alt="moms-knife" class="knife-icon">
+    <img src="Imgs/moms-knife.png" alt="moms-knife" class="knife-icon">
     <span>BACK TO TEAM</span>
 </a>
 </body>
