Added anchor to team members on back btn

--- a/Lab1/Lab1WebApplication/src/main/resources/static/index.html
+++ b/Lab1/Lab1WebApplication/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
         гріхами розплутуючи таємниці минулого в надії на Покояння.
     </div>
     <!-- картинки членів команди -->
-    <h2 class="members-title">Учасники команди</h2>
+    <h2 class="members-title" id="team-members">Учасники команди</h2>
     <div class="team-members">
         <div class="member">
             <a href="/isaac">
