--- a/Lab1/Lab1WebApplication/src/main/resources/static/judas-member-page.html
+++ b/Lab1/Lab1WebApplication/src/main/resources/static/judas-member-page.html
@@ -34,7 +34,7 @@
 
     </div>
 </div>
-<a href="/" class="back-button">
+<a href="/#team-members" class="back-button">
     <img src="Imgs/moms-knife.png" alt="moms-knife" class="knife-icon">
     <span>BACK TO TEAM</span>
 </a>
