Fixed text about Cain

--- a/Lab1/Lab1WebApplication/src/main/resources/static/cain-member-page.html
+++ b/Lab1/Lab1WebApplication/src/main/resources/static/cain-member-page.html
@@ -23,9 +23,9 @@
 
     <div class="member-desc">
         <p>
-            Юда є відсиланням до Юди Іскаріота, дванадцятого учня Ісуса Христа. Юда зрадив Ісуса римлянам в обмін на
-            тридцять срібняків, що символізується трьома монетами, з якими Юда починає гру. Крім того, вважається, що ці
-            монети також уособлюють три авраамічні релігії — юдаїзм, християнство та іслам.
+            Каїн — це посилання на біблійну історію про Каїна та Авеля, у якій Кайн (землероб) здійснює перше вбивство
+            свого брата Авеля (вівчара) через заздрість, бо вважав, що Бог цінує Авелевих овець більше, ніж Кайнові
+            плоди землі.
         </p>
         <p>
             Карта Каїна: X — Wheel of Fortune?. Цей Аркан асоціюється з опору змінам, застою і відчуттям застряглості —
